MBANK-315: Add docker files to support build & execution in the docker containers.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <title>Vite App</title>
+    <title>MorphoBank V4</title>
   </head>
   <body class="d-flex flex-column h-100">
     <div id="app"></div>
