--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <title>MorphoBank V4</title>
   </head>
-  <body class="d-flex flex-column h-100">
+  <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
