--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
       rel="stylesheet"
     />
 
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EKXHC84B6M"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-EKXHC84B6M');
+    </script>
+
     <title>MorphoBank V4</title>
   </head>
   <body>
